tests/fail/eufnull.mbc
hash h
name k : message
system null.

goal shouldntpass :
  h(k,k) = k => False.
Proof.
  euf 0.
Qed.
